# CompilerConstruction

./: .gitignore  CMakeLists.txt  main.cpp  makefile  result.c
ILanguageCodeSnippets/: ArraySum.i  ArraySum.imp  Conditionals  Loops.imp  Records.imp  TypeInference.imp  test.imp  test1.imp  test2.imp  test3.imp  ult.c  ult.i  ult.imp
ITest/Ill/: ill-array-assign.imp  ill-records.imp  ill-routines.imp  ill-var.imp
ITest/Well/: Loops.imp  test.imp  ult.imp
LexicalAnalysis/: Parser.cpp  Parser.h
Tokens/: Identifier.h  Integer.h  PreprocessedToken.h  Span.h  Token.cpp  Token.h
lib/googletest/googlemock/include/gmock/internal/: gmock-pp.h
lib/googletest/googletest/include/gtest/internal/: gtest-internal.h
src/: CMakeLists.txt  Consts.h  ErrorHandler.h  FileReader.cpp  FileReader.h  StoredType.h  Tag.h  main.cpp
src/AST/: AST.cpp  AST.h  Visitor.cpp  Visitor.h
src/CodeGeneration/: CodeGenerator.h  ICodeGeneratable.h  Visitor.h
src/CodeGenerator/: CodeGenerator.cpp  CodeGenerator.h
src/Debug/: DebugMode.h
src/Error/: ErrorHandler.h
src/FileReader/: FileReader.cpp  FileReader.h
src/LexicalAnalysis/: Demonstration.cpp  Demonstration.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h
src/Parser/: Parser.cpp  Parser.h  Parser.tab.cpp  Parser.tab.hpp  Parser.ypp
src/Tokens/: Boolean.h  Identifier.h  Integer.h  PreprocessedToken.cpp  PreprocessedToken.h  Real.h  Span.cpp  Span.h  Token.cpp  Token.h  TokenCode.h  TokenMap.cpp  TokenMap.h  TokenNameMap.cpp  TokenNameMap.h
src/TypeCheck/: Consts.h  StoredType.cpp  StoredType.h  Tag.h  TypeChecker.cpp  TypeChecker.h
tst/: Formula-test.cpp  main.cpp  remove-comments-test.cpp
